0.2.3  TBD

   - Documentation upgrades
   - Added build command

0.2.2  2025-01-15

   - Simplify solution to #6 by running SlackBuild through open

0.2.1  2025-01-14

   - Minor bug fix

0.2.0  2025-01-14

   - Prevent up-to-date packages from entering install queue without -f
   - Be less wasteful with disk space when teeing command output (see #6)

0.1.5  2024-11-01

   - 'install' and 'remove' commands accept multiple package arguments
   - Added '-a' and '-u' options for the 'query' command
   - 'install' command only installs package if newer version is available
   - Redirect git sync output to STDERR
   - Documentation upgrades

0.0.7  2024-10-28

   - Bug fix in the SlackBuild.

0.0.6  2024-10-21

   - Bug fix in the SlackBuild.

0.0.5  2024-10-21

   - Bug fix.

0.0.4  2024-10-20

   - First release.