@@ -2,6 +2,8 @@
 
    - Documentation upgrades
    - Added build command
+   - Added '-k' option to the install command to keep built package
+   - Removed CLEANUP configuration file option
 
 0.2.2  2025-01-15
 
